--- a/dbt/include/spark_custom/profile_template.yml
+++ b/dbt/include/spark_custom/profile_template.yml
@@ -31,6 +31,8 @@ prompts:
         type: 'int'
     thrift:
       _fixed_method: thrift
+    spark-submit:
+      _fixed_method: spark-submit
   port:
     default: 443
     type: 'int'
